# deep_collections

./: .flake8  .gitignore  .pre-commit-config.yaml  LICENSE  Makefile  README.md  deep.py  presentation.html  presentation.md  pyproject.toml  setup.py  test_dc.py  tox.ini
.github/workflows/: tests.yml
deep_collection/: __init__.py
deep_collections/: __init__.py  matching.py  utils.py
presentation_files/: code-320016e09986.css  dark_colorblind-8b800495504f.css  dark_dimmed-1ad5cf51dfeb.css  dark_high_contrast-11d3505dc06a.css  dark_tritanopia-0dcf95848dd5.css  github-b46e0c81f808.css  global-835b815139bc.css  light_colorblind-daa38c88b795.css  light_high_contrast-1b9ea565820a.css  light_tritanopia-e4be9332dd6c.css  primer-7cc439b4edd0.css
tests/: conftest.py  parameters.py  shared.py  test_builtins.py  test_collections.py  test_dc.py  test_deep.py  test_dict.py  test_dotty_dict.py  test_dpath.py  test_general.py  test_interfaces.py  test_jmespath.py  test_list.py  test_tuple.py  test_tuples.py  test_user_list.py  test_utils.py
