[tool.poetry]
name = "deep_collection"
version = "0.1.0"
description = "Easy access to items in deep collections."
authors = ["Joseph Nix <nixjdm@terminallabs.com>"]
license = "BSD"

[tool.poetry.dependencies]
python = "^3.7"

[tool.poetry.dev-dependencies]
pytest = "^7.1.0"
tox = "^3.24.5"
pre-commit = "^2.17.0"
coverage = "^6.3.2"
tox-poetry-installer = {extras = ["poetry"], version = "^0.8.3"}
ipdb = "^0.13.9"
pytest-cov = "^3.0.0"

[tool.poetry.extras]
test = ["pytest"]

[build-system]
requires = ["poetry-core>=1.0.0"]
build-backend = "poetry.core.masonry.api"
