[tool.poetry]
name = "deep_collection"
version = "0.1.0"
description = "Easy access to items in deep collections."
authors = ["Joseph Nix <nixjdm@terminallabs.com>"]
license = "BSD"

[tool.poetry.dependencies]
python = "^3.7"

[tool.poetry.dev-dependencies]
coverage = "^6.3.2"
dotty-dict = "^1.3.0"
dpath = "^2.0.6"
ipdb = "^0.13.9"
ipython = ">7"
jmespath = "^1.0.0"
pre-commit = "^2.17.0"
pytest = "^7.1.0"
pytest-cov = "^3.0.0"
pytest-mock = "^3.7.0"
tox = "^3.24.5"
tox-poetry-installer = {extras = ["poetry"], version = "^0.8.3"}

[build-system]
requires = ["poetry-core>=1.0.0"]
build-backend = "poetry.core.masonry.api"
