[tool.poetry]
name = "deep_collection"
version = "0.2.0b1"
authors = ["Joseph Nix <nixjdm@terminallabs.com>"]
classifiers=[
    'Intended Audience :: Developers',
    'License :: OSI Approved :: BSD License',
    'Natural Language :: English',
    'Programming Language :: Python :: 3 :: Only',
    'Programming Language :: Python :: 3.10',
    'Programming Language :: Python :: 3.11',
    'Programming Language :: Python :: 3.7',
    'Programming Language :: Python :: 3.8',
    'Programming Language :: Python :: 3.9',
    'Programming Language :: Python :: Implementation :: CPython',
    'Programming Language :: Python :: Implementation :: PyPy',
    'Topic :: Software Development :: Libraries :: Python Modules',
    'Topic :: Software Development',
]
description = "Easy access to items in deep collections."
keywords = ["deep", "nested", "dict", "json", "data"]
license = "BSD"
readme = "README.md"
repository = "https://github.com/terminal-labs/deep_collection"

[tool.poetry.dependencies]
python = "^3.7"

[tool.poetry.group.dev.dependencies]
coverage = "^6.3.2"
cython = "^0.29.32"
dotty-dict = "^1.3.0"
dpath = "^2.0.6"
ipdb = "^0.13.9"
ipython = ">7"
jmespath = "^1.0.0"
pre-commit = "^2.17.0"
pytest = "^7.1.3"
pytest-cov = "^3.0.0"
pytest-mock = "^3.7.0"
tox = "^3.24.5"
tox-poetry-installer = {version = "^0.9.0"}

[build-system]
requires = ["poetry-core>=1.0.0"]
build-backend = "poetry.core.masonry.api"
